refactoring stucture
